from .._core.framework import Context


class Aulos(Context): ...
